# bitkit-docker

./: .gitignore  .gitmodules  README.md  btc-fee-estimates.json  docker-compose.yml  vss-server-config.toml
lnurl-server/: config.js  database.js  package-lock.json  package.json  server.js  templates.js
lnurl-server/routes/: admin.js  auth.js  decoder.js  generate.js
lnurl-server/services/: backgroundJobs.js
lnurl-server/utils/: jwt.js  validation.js
sql/: v0_create_vss_db.sql
vss-test/: Cargo.toml
vss-test/src/: vss_jwt_test.rs
