[package]
name = "vss-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vss_jwt_test"
path = "src/vss_jwt_test.rs"

[dependencies]
jsonwebtoken = "8.0"
prost = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
vss-client = "0.3.1"
